# module_coupling_metrics

./: .gitignore  README.md  setup.cfg  setup.py
src/module_coupling_metrics/: app.py  metrics.py  project_structure.py  reflection.py
tests/: test_metrics.py  test_project_structure.py  test_reflection.py
tests/test_data/: run_sample_project.py
tests/test_data/sample_project/: __init__.py  x.py
tests/test_data/sample_project/a/: __init__.py  a1.py  a2.py
tests/test_data/sample_project/b/: __init__.py  b1.py  b2.py
