[metadata]
name = module_coupling_metrics
version = attr: module_coupling_metrics.__version__
url = https://github.com/Oaz/module_coupling_metrics
license = AGPL-3.0-or-later
author = Olivier Azeau
description = Compute module coupling metrics for Python projects.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
python_requires = >= 3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    module_coupling_metrics = module_coupling_metrics.app:main
